--- a/vignette/vignette_trendyesg.ipynb
+++ b/vignette/vignette_trendyesg.ipynb
@@ -34,154 +34,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "cfc4efea",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "5889a152",
+   "metadata": {},
    "source": [
-    "import requests\n",
-    "from requests.exceptions import HTTPError\n",
-    "import requests.auth\n",
-    "import re\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "regionlist = ['US', 'BR', 'AU', 'CA', 'FR', 'DE', 'HK', 'IN', 'IT', 'ES', 'GB', 'SG']\n",
-    "YAHOOF_KEY = os.getenv('YAHOOF_KEY')\n",
-    "app_key = os.getenv('ESG_KEY')\n",
-    "\n",
-    "def trendyesg(region, start=5):\n",
-    "    \"\"\"\n",
-    "    Get region's trendy tickers' esg score based on given region and regular rank of market price.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    region : string\n",
-    "      A string that limit the region of market consumers are interested in, which include US, BR, AU, CA, FR, DE, HK, IN, IT, ES, GB, and SG.\n",
-    "    start : int\n",
-    "      A int that indicate the ranking place to start from.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    pandas.dataframe\n",
-    "      The dataframe of trendy tickers' esg, environmental, social,governance score, and its ticker based on consumers interested region and the lowest ranking consumers want to start to look at\n",
-    "\n",
-    "    Examples\n",
-    "    --------\n",
-    "    >>> from brandaniethical import trendyesg \n",
-    "    >>> trendyesg(region='US',start =8)\n",
-    "\tcompany_name\tenv_score\tsoc_score\tgov_score\ttotal\tticker\n",
-    "0\tMedtronic plc\t500\t304\t310\t1114\tMDT\n",
-    "1\tPfizer Inc.\t510\t300\t305\t1115\tPFE\n",
-    "2\tRoblox Corporation\t245\t304\t220\t769\tRBLX\n",
-    "3\tLemonade, Inc.\t520\t303\t300\t1123\tLMND\n",
-    "4\tNucor Corporation\t251\t326\t210\t787\tNUE\n",
-    "    \"\"\"\n",
-    "    assert region in regionlist, f\"This function only works on {regionlist} but region={region}.\"\n",
-    "    assert isinstance(start, int), f\"This function only works on int but start={start}.\"\n",
-    "    def get_trendycom(region, start=5):\n",
-    "        url = \"https://yh-finance.p.rapidapi.com/market/get-trending-tickers\"\n",
-    "        def trendytick(region):\n",
-    "            querystring = {\"region\":region}\n",
-    "            try:\n",
-    "                headers = {\n",
-    "                    'x-rapidapi-host': \"yh-finance.p.rapidapi.com\",\n",
-    "                    'x-rapidapi-key': YAHOOF_KEY\n",
-    "                            }\n",
-    "                response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
-    "                response.raise_for_status()\n",
-    "\n",
-    "            except HTTPError as http_err:\n",
-    "                print(f'HTTP error occurred: {http_err}')\n",
-    "            except Exception as err: \n",
-    "                print(f'Other error occurred: {err}')\n",
-    "            return response.json()\n",
-    "\n",
-    "        cominfolist = trendytick(region)\n",
-    "\n",
-    "        region = []\n",
-    "        shortName = []\n",
-    "        regularMarketPrice = []\n",
-    "        symbol=[]\n",
-    "        trendtick_df = pd.DataFrame()\n",
-    "    \n",
-    "        for i in cominfolist['finance']['result'][0]['quotes']:   \n",
-    "            shortName.append(i['shortName'])\n",
-    "            regularMarketPrice.append(i['regularMarketPrice'])\n",
-    "            symbol.append(i['symbol'])\n",
-    "\n",
-    "        trendtick_df['shortName'] = pd.Series(shortName)\n",
-    "        trendtick_df['regularMarketPrice'] = pd.Series(regularMarketPrice)\n",
-    "        trendtick_df['symbol'] = pd.Series(symbol)\n",
-    "        trendtick_df['maxprice_rank'] = trendtick_df['regularMarketPrice'].rank(method='max')\n",
-    "\n",
-    "        return trendtick_df.sort_values(by=['maxprice_rank']).iloc[start:start+5]\n",
-    "    \n",
-    "    #get trendy tickers outcome\n",
-    "    tdf = get_trendycom(region=region, start=5)\n",
-    "    assert tdf.empty == False, f'there is no search results of {region} market'\n",
-    "    def ticktrans(tdf):\n",
-    "        #make fuzzy search of ticker e.g.\n",
-    "        ttlist = [i for i in tdf['symbol']]\n",
-    "        if region == 'US':\n",
-    "            reg_tick = '(^.+?)-|(^.*)'\n",
-    "            for tick in ttlist:\n",
-    "                try:\n",
-    "                    ticklist = [re.match(reg_tick,tick).group(1) for tick in ttlist]\n",
-    "                    ticklist.extend([re.match(reg_tick,tick).group(2) for tick in ttlist])\n",
-    "                    ticklist = list(filter(None, ticklist))\n",
-    "                    return ticklist\n",
-    "                except TypeError as e:\n",
-    "                    print(f'{e}: the ticker is not supported')\n",
-    "        else:\n",
-    "            return ttlist\n",
-    "    ticktransl = ticktrans(tdf)\n",
-    "    \n",
-    "    base_url = 'https://tf689y3hbj.execute-api.us-east-1.amazonaws.com/prod/authorization/'\n",
-    "    df = pd.DataFrame()\n",
-    "    company_name=[]\n",
-    "    env_score=[]\n",
-    "    soc_score=[]\n",
-    "    gov_score=[]\n",
-    "    total=[]\n",
-    "    region=[]\n",
-    "    ticker=[]\n",
-    "    for brand_tick in ticktransl:\n",
-    "        try:\n",
-    "            response_esg = requests.get(base_url+'search?',params={'q':brand_tick,'token':app_key})\n",
-    "            response_esg.raise_for_status()\n",
-    "            company_name.append(response_esg.json()[0]['company_name'])\n",
-    "            env_score.append(response_esg.json()[0]['environment_score'])\n",
-    "            soc_score.append(response_esg.json()[0]['social_score'])\n",
-    "            gov_score.append(response_esg.json()[0]['governance_score'])\n",
-    "            total.append(response_esg.json()[0]['total'])\n",
-    "            ticker.append(brand_tick)\n",
-    "        except (IndexError, TypeError) as error:\n",
-    "            company_name.append(brand_tick)\n",
-    "            env_score.append('NA')\n",
-    "            soc_score.append('NA')\n",
-    "            gov_score.append('NA')\n",
-    "            total.append('NA')\n",
-    "            ticker.append(brand_tick)\n",
-    "            print(f\"{brand_tick}'s esg not in database\")\n",
-    "        except HTTPError as http_err:\n",
-    "            print(f'HTTP error occurred: {http_err}')\n",
-    "        except Exception as err: \n",
-    "            print(f'Other error occurred: {err}')\n",
-    "    df['company_name'] = pd.Series(company_name)\n",
-    "    df['env_score'] = pd.Series(env_score)\n",
-    "    df['soc_score'] = pd.Series(soc_score)\n",
-    "    df['gov_score'] = pd.Series(gov_score)\n",
-    "    df['total'] = pd.Series(total)\n",
-    "    df['ticker'] = pd.Series(ticker)\n",
-    "    return df"
+    "# import package"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "id": "73749265",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: brandaniethical in /opt/anaconda3/lib/python3.8/site-packages (0.1.0)\n",
+      "Requirement already satisfied: pandas<2.0.0,>=1.3.5 in /opt/anaconda3/lib/python3.8/site-packages (from brandaniethical) (1.3.5)\n",
+      "Requirement already satisfied: pytest<7.0.0,>=6.2.5 in /opt/anaconda3/lib/python3.8/site-packages (from brandaniethical) (6.2.5)\n",
+      "Requirement already satisfied: bs4<0.0.2,>=0.0.1 in /opt/anaconda3/lib/python3.8/site-packages (from brandaniethical) (0.0.1)\n",
+      "Requirement already satisfied: lxml<5.0.0,>=4.7.1 in /opt/anaconda3/lib/python3.8/site-packages (from brandaniethical) (4.7.1)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.26.0 in /opt/anaconda3/lib/python3.8/site-packages (from brandaniethical) (2.26.0)\n",
+      "Requirement already satisfied: beautifulsoup4 in /opt/anaconda3/lib/python3.8/site-packages (from bs4<0.0.2,>=0.0.1->brandaniethical) (4.9.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/anaconda3/lib/python3.8/site-packages (from pandas<2.0.0,>=1.3.5->brandaniethical) (2.8.1)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /opt/anaconda3/lib/python3.8/site-packages (from pandas<2.0.0,>=1.3.5->brandaniethical) (1.20.1)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /opt/anaconda3/lib/python3.8/site-packages (from pandas<2.0.0,>=1.3.5->brandaniethical) (2021.1)\n",
+      "Requirement already satisfied: iniconfig in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (1.1.1)\n",
+      "Requirement already satisfied: py>=1.8.2 in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (1.10.0)\n",
+      "Requirement already satisfied: pluggy<2.0,>=0.12 in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (0.13.1)\n",
+      "Requirement already satisfied: toml in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (0.10.2)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (20.3.0)\n",
+      "Requirement already satisfied: packaging in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (20.9)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/anaconda3/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas<2.0.0,>=1.3.5->brandaniethical) (1.15.0)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.26.0->brandaniethical) (2.0.9)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.26.0->brandaniethical) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.26.0->brandaniethical) (2020.12.5)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.26.0->brandaniethical) (1.25.11)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /opt/anaconda3/lib/python3.8/site-packages (from beautifulsoup4->bs4<0.0.2,>=0.0.1->brandaniethical) (2.2.1)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /opt/anaconda3/lib/python3.8/site-packages (from packaging->pytest<7.0.0,>=6.2.5->brandaniethical) (2.4.7)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install brandaniethical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ca4b71ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from brandaniethical import brandaniethical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "d5dc7d15",
    "metadata": {},
    "outputs": [
@@ -217,117 +130,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Medtronic plc</td>\n",
-       "      <td>500</td>\n",
-       "      <td>304</td>\n",
-       "      <td>310</td>\n",
-       "      <td>1114</td>\n",
-       "      <td>MDT</td>\n",
+       "      <td>Nikola Corporation</td>\n",
+       "      <td>243</td>\n",
+       "      <td>231</td>\n",
+       "      <td>210</td>\n",
+       "      <td>684</td>\n",
+       "      <td>NKLA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Pfizer Inc.</td>\n",
-       "      <td>510</td>\n",
-       "      <td>300</td>\n",
-       "      <td>305</td>\n",
-       "      <td>1115</td>\n",
-       "      <td>PFE</td>\n",
+       "      <td>Invitae Corporation</td>\n",
+       "      <td>260</td>\n",
+       "      <td>304</td>\n",
+       "      <td>295</td>\n",
+       "      <td>859</td>\n",
+       "      <td>NVTA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Roblox Corporation</td>\n",
-       "      <td>245</td>\n",
-       "      <td>304</td>\n",
-       "      <td>220</td>\n",
-       "      <td>769</td>\n",
-       "      <td>RBLX</td>\n",
+       "      <td>Coupang, Inc.</td>\n",
+       "      <td>200</td>\n",
+       "      <td>201</td>\n",
+       "      <td>200</td>\n",
+       "      <td>601</td>\n",
+       "      <td>CPNG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Lemonade, Inc.</td>\n",
-       "      <td>520</td>\n",
-       "      <td>303</td>\n",
-       "      <td>300</td>\n",
-       "      <td>1123</td>\n",
-       "      <td>LMND</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Nucor Corporation</td>\n",
-       "      <td>251</td>\n",
-       "      <td>326</td>\n",
-       "      <td>210</td>\n",
-       "      <td>787</td>\n",
-       "      <td>NUE</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         company_name  env_score  soc_score  gov_score  total ticker\n",
-       "0       Medtronic plc        500        304        310   1114    MDT\n",
-       "1         Pfizer Inc.        510        300        305   1115    PFE\n",
-       "2  Roblox Corporation        245        304        220    769   RBLX\n",
-       "3      Lemonade, Inc.        520        303        300   1123   LMND\n",
-       "4   Nucor Corporation        251        326        210    787    NUE"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#show case\n",
-    "trendyesg(region='US',start =8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "f4893138",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LCID's esg not in database\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>company_name</th>\n",
-       "      <th>env_score</th>\n",
-       "      <th>soc_score</th>\n",
-       "      <th>gov_score</th>\n",
-       "      <th>total</th>\n",
-       "      <th>ticker</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
        "      <td>AMC Entertainment Holdings, Inc.</td>\n",
        "      <td>210</td>\n",
        "      <td>216</td>\n",
@@ -336,16 +165,7 @@
        "      <td>AMC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>LCID</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>LCID</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>General Motors Company</td>\n",
        "      <td>391</td>\n",
        "      <td>323</td>\n",
@@ -353,57 +173,40 @@
        "      <td>929</td>\n",
        "      <td>GM</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Bottomline Technologies (de), Inc.</td>\n",
-       "      <td>540</td>\n",
-       "      <td>302</td>\n",
-       "      <td>300</td>\n",
-       "      <td>1142</td>\n",
-       "      <td>EPAY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Cerner Corporation</td>\n",
-       "      <td>532</td>\n",
-       "      <td>300</td>\n",
-       "      <td>300</td>\n",
-       "      <td>1132</td>\n",
-       "      <td>CERN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         company_name env_score soc_score gov_score total  \\\n",
-       "0    AMC Entertainment Holdings, Inc.       210       216       200   626   \n",
-       "1                                LCID        NA        NA        NA    NA   \n",
-       "2              General Motors Company       391       323       215   929   \n",
-       "3  Bottomline Technologies (de), Inc.       540       302       300  1142   \n",
-       "4                  Cerner Corporation       532       300       300  1132   \n",
+       "                       company_name  env_score  soc_score  gov_score  total  \\\n",
+       "0                Nikola Corporation        243        231        210    684   \n",
+       "1               Invitae Corporation        260        304        295    859   \n",
+       "2                     Coupang, Inc.        200        201        200    601   \n",
+       "3  AMC Entertainment Holdings, Inc.        210        216        200    626   \n",
+       "4            General Motors Company        391        323        215    929   \n",
        "\n",
        "  ticker  \n",
-       "0    AMC  \n",
-       "1   LCID  \n",
-       "2     GM  \n",
-       "3   EPAY  \n",
-       "4   CERN  "
+       "0   NKLA  \n",
+       "1   NVTA  \n",
+       "2   CPNG  \n",
+       "3    AMC  \n",
+       "4     GM  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trendyesg(region='US',start =10)"
+    "#show case\n",
+    "brandaniethical.trendyesg(region='US',start =8)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63867fda",
+   "id": "88cd3b13",
    "metadata": {},
    "outputs": [],
    "source": []
