--- a/vignette/vignettes_brandaniethical.ipynb
+++ b/vignette/vignettes_brandaniethical.ipynb
@@ -29,6 +29,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3f336389",
+   "metadata": {},
+   "source": [
+    "## import package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1dd75589",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: brandaniethical in /opt/anaconda3/lib/python3.8/site-packages (0.1.0)\n",
+      "Requirement already satisfied: bs4<0.0.2,>=0.0.1 in /opt/anaconda3/lib/python3.8/site-packages (from brandaniethical) (0.0.1)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.26.0 in /opt/anaconda3/lib/python3.8/site-packages (from brandaniethical) (2.26.0)\n",
+      "Requirement already satisfied: pandas<2.0.0,>=1.3.5 in /opt/anaconda3/lib/python3.8/site-packages (from brandaniethical) (1.3.5)\n",
+      "Requirement already satisfied: pytest<7.0.0,>=6.2.5 in /opt/anaconda3/lib/python3.8/site-packages (from brandaniethical) (6.2.5)\n",
+      "Requirement already satisfied: lxml<5.0.0,>=4.7.1 in /opt/anaconda3/lib/python3.8/site-packages (from brandaniethical) (4.7.1)\n",
+      "Requirement already satisfied: beautifulsoup4 in /opt/anaconda3/lib/python3.8/site-packages (from bs4<0.0.2,>=0.0.1->brandaniethical) (4.9.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/anaconda3/lib/python3.8/site-packages (from pandas<2.0.0,>=1.3.5->brandaniethical) (2.8.1)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /opt/anaconda3/lib/python3.8/site-packages (from pandas<2.0.0,>=1.3.5->brandaniethical) (1.20.1)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /opt/anaconda3/lib/python3.8/site-packages (from pandas<2.0.0,>=1.3.5->brandaniethical) (2021.1)\n",
+      "Requirement already satisfied: iniconfig in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (1.1.1)\n",
+      "Requirement already satisfied: py>=1.8.2 in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (1.10.0)\n",
+      "Requirement already satisfied: toml in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (0.10.2)\n",
+      "Requirement already satisfied: packaging in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (20.9)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (20.3.0)\n",
+      "Requirement already satisfied: pluggy<2.0,>=0.12 in /opt/anaconda3/lib/python3.8/site-packages (from pytest<7.0.0,>=6.2.5->brandaniethical) (0.13.1)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/anaconda3/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas<2.0.0,>=1.3.5->brandaniethical) (1.15.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.26.0->brandaniethical) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.26.0->brandaniethical) (2020.12.5)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.26.0->brandaniethical) (2.0.9)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.26.0->brandaniethical) (1.25.11)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /opt/anaconda3/lib/python3.8/site-packages (from beautifulsoup4->bs4<0.0.2,>=0.0.1->brandaniethical) (2.2.1)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /opt/anaconda3/lib/python3.8/site-packages (from packaging->pytest<7.0.0,>=6.2.5->brandaniethical) (2.4.7)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install brandaniethical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "65817a8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from brandaniethical import brandaniethical"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b2164f42",
    "metadata": {},
    "source": [
@@ -39,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 6,
    "id": "2fc62ed5",
    "metadata": {},
    "outputs": [],
@@ -89,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 7,
    "id": "1a30f7f0",
    "metadata": {},
    "outputs": [],
@@ -100,143 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 8,
    "id": "304c1541",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['cos', 'theory', 'lululemon']"
-      ]
-     },
-     "execution_count": 235,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "footwearvig = brandbag('footwear')\n",
     "apparelvig = brandbag('apparel')\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "39a54d7b",
-   "metadata": {},
-   "source": [
-    "## Web scrape data from public websites: good on you.\n",
-    "+ presentation: brandbook\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 221,
-   "id": "c9c526aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "import lxml\n",
-    "from lxml import html\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "import pandas as pd\n",
-    "\n",
-    "def brandaniethical(brandlist):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Get fashion brands' animal ethical usage information. provide information of whether the brand use fur, angora, down feather, shearling, karakul, exotic animal skin and hair, wool use including ‘mulesing’, and leather \n",
-    "    Also check whether brands use these material align with standards.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    brandlist : list\n",
-    "      A list of brands name that consumers want to know their condition of animal usage\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    pandas.dataframe\n",
-    "      The dataframe of brands ethical consumption of animal material which include usage of fur, angora, down feather, shearling, karakul, exotic animal skin and hair, wool use including ‘mulesing’, and leather. Also check whether brands use these material align with standards.\n",
-    "      \n",
-    "    Examples\n",
-    "    --------\n",
-    "    >>> from brandaniethical import brandaniethical \n",
-    "    >>> brandaniethical.brandaniethical(['cos','theory','lululemon','nike', 'skechers'])\n",
-    "\tcompany\tanimal_score\tupdate\tfur\tangora\tleather\twool\tshearling\tkarakul\tdown\tfeather\texotic animal hair\texotic animal skin\tdown_RDS\twool_mulesing\n",
-    "0\tcos\t3/5\tJuly 2020\t0\t0\t1\t1\t0\t0\t1\t0\t1\t0\t1\t1\n",
-    "1\ttheory\t2/5\tDecember 2019\t0\t0\t1\t1\t0\t0\t1\t0\t1\t0\t0\t0\n",
-    "2\tlululemon\t2/5\tJuly 2020\t0\t0\t1\t1\t0\t0\t1\t0\t1\t0\t1\t0\n",
-    "3\tnike\t2/5\tJuly 2020\t0\t0\t1\t1\t0\t0\t1\t0\t1\t0\t0\t0\n",
-    "4\tskechers\t2/5\tAugust 2020\t0\t0\t1\t1\t0\t0\t0\t0\t0\t0\t0\t0\n",
-    "    \"\"\"\n",
-    "    assert isinstance(brandlist, list), f\"This function only works on list but brandlist={brandlist}.\"\n",
-    "    for b in brandlist:\n",
-    "        assert isinstance(b, str), f\"This function only works on string but brand={b}.\"\n",
-    "    brandlist = [b.lower() for b in brandlist]\n",
-    "    ani_reg = '[^.]* animal [^.]*\\.'\n",
-    "    use_reg = '[^.]* (uses) [^.]*\\.'\n",
-    "    date_reg = '(Last Updated: )(\\w*\\s\\d...)'\n",
-    "    web = 'https://directory.goodonyou.eco/'\n",
-    "    animal_score = []\n",
-    "    ani_rate= []\n",
-    "    company = []\n",
-    "    update = []\n",
-    "    def brandani(brandlist):\n",
-    "        df_gfy=pd.DataFrame()\n",
-    "        for brand in brandlist:\n",
-    "            goypage = requests.get(web +'brand/'+ brand)\n",
-    "            soup = BeautifulSoup(goypage.content, 'html.parser')\n",
-    "            try:\n",
-    "                animal_score.append(str(soup.find_all(\"span\", {\"class\": \"StyledText-sc-1sadyjn-0 ccIhDL\"})[2].string))\n",
-    "                ani_rate.append([string for string in soup.stripped_strings if re.search(ani_reg, string)][0])\n",
-    "                update.append([string for string in soup.stripped_strings if re.search(date_reg, string)][0]) \n",
-    "            except (IndexError, TypeError, NameError, KeyError):\n",
-    "                print(f'please check company name of {brand}')\n",
-    "                pass\n",
-    "            else:\n",
-    "                df_gfy['company'] = pd.Series(brandlist)\n",
-    "                df_gfy['animal_score'] = pd.Series(animal_score)\n",
-    "                df_gfy['ani_rate'] = pd.Series(ani_rate)\n",
-    "                df_gfy['update'] = pd.Series(update)\n",
-    "                pd.set_option('display.max_colwidth', None)\n",
-    "        return df_gfy\n",
-    "    global dfydf\n",
-    "    dfydf = brandani(brandlist)\n",
-    "    #check animal material usage\n",
-    "    #data wrangling\n",
-    "    try:\n",
-    "        \n",
-    "        dfydf['ani_material'] = [re.search(use_reg, i).group(0) for i in dfydf['ani_rate']]\n",
-    "\n",
-    "    except (IndexError, TypeError, NameError, KeyError):\n",
-    "        print(f'no animal material information')\n",
-    "        \n",
-    "\n",
-    "    else:\n",
-    "        dfydf['update'] = [re.search('\\w*\\s\\d...', i).group(0) for i in dfydf['update']]\n",
-    "        dfydf['animal_score'] = [re.sub(' out of ', '/', i) for i in dfydf['animal_score']]\n",
-    "        fabric = ['fur','angora', 'leather', 'wool', 'shearling', 'karakul', 'down', 'feather', 'exotic animal hair', 'exotic animal skin']\n",
-    "        for f in fabric:\n",
-    "            dfydf[f]=dfydf['ani_material'].str.contains(f)\n",
-    "        #check if use down whether down accredited by the Responsible Down Standar\n",
-    "        RDS_reg = 'It uses down accredited by the Responsible Down Standar'\n",
-    "        dfydf['down_RDS'] = dfydf['ani_rate'].str.contains(RDS_reg)\n",
-    "        dfydf.loc[dfydf['down_RDS']==True,'down'] = True\n",
-    "        #check if use wool whether wool includes mulesing\n",
-    "        dfydf['wool_mulesing'] = dfydf['ani_rate'].str.contains('mules')\n",
-    "        dfydf.loc[dfydf['wool_mulesing']==True,'wool'] = True\n",
-    "        df_aniusage = dfydf.loc[:,dfydf.columns!='ani_material']\n",
-    "        df_material = df_aniusage.replace(True,1)\n",
-    "        df_material = df_material.replace(False,0)\n",
-    "        \n",
-    "        return df_material.loc[:,df_material.columns!='ani_rate']\n",
-    "       "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 4,
    "id": "05aea622",
    "metadata": {},
    "outputs": [
@@ -396,18 +330,18 @@
        "4         0              0  "
       ]
      },
-     "execution_count": 222,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "brandaniethical(['cos','theory','lululemon','nike', 'skechers'])"
+    "brandaniethical.brandaniethical(['cos','theory','lululemon','nike', 'skechers'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 9,
    "id": "a9301269",
    "metadata": {},
    "outputs": [
@@ -525,18 +459,18 @@
        "2              1  "
       ]
      },
-     "execution_count": 228,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "brandaniethical(footwearvig)"
+    "brandaniethical.brandaniethical(footwearvig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 10,
    "id": "cb0fdc9d",
    "metadata": {},
    "outputs": [
@@ -654,14 +588,22 @@
        "2         1              0  "
       ]
      },
-     "execution_count": 236,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "brandaniethical(apparelvig)"
+    "brandaniethical.brandaniethical(apparelvig)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "374ce97d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
